reverse-proxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reverse-proxy
spec:
  selector:
    matchLabels:
      app: reverse-proxy
  template:
    metadata:
      labels:
        app: reverse-proxy
    spec:
      containers:
      - name: reverse-proxy
        image: nginx
        command: ["nginx"]
        args: ["-c", "/etc/nginx/nginx.conf"]
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
        volumeMounts:
        - name: config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        ports:
        - containerPort: 8080
      volumes:
      - name: config
        configMap:
          name: reverse-proxy-config
