reverse-proxy/proxmox-endpoints.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: proxmox-service-1
  labels:
    kubernetes.io/service-name: proxmox-service
addressType: IPv4
ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 8006
endpoints:
  - addresses:
      - "192.168.20.100"
