reverse-proxy/proxmox-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxmox-service
spec:
  type: ExternalName
  externalName: servah-host.fritz.box
  ports:
    - name: http
      port: 80
      targetPort: 8006
