reverse-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reverse-proxy
spec:
  selector:
    app: reverse-proxy
  ports:
  - port: 8080
    targetPort: 8080
