reverse-proxy/hass-ingress-master.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.org/mergeable-ingress-type: master
  name: ingress-reverse-proxy-hass
spec:
  ingressClassName: nginx
  rules:
    - host: smarthome.crazypokemondev.de
  tls:
    - hosts:
        - smarthome.crazypokemondev.de
      secretName: letsencrypt-hass
