reverse-proxy/hass-ingress-minion.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.org/mergeable-ingress-type: minion
    nginx.org/websocket-services: "reverse-proxy"
  name: ingress-reverse-proxy-minion-hass
spec:
  ingressClassName: nginx
  rules:
    - host: smarthome.crazypokemondev.de
      http:
        paths:
          - backend:
              service:
                name: reverse-proxy
                port:
                  number: 8080
            path: "/"
            pathType: Prefix
