reverse-proxy/hermitcraft-ingress-minion.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.org/mergeable-ingress-type: minion
  name: ingress-reverse-proxy-minion-hermitcraft
spec:
  ingressClassName: nginx
  rules:
    - host: dynmap.hermitcraft.crazypokemondev.de
      http:
        paths:
          - backend:
              service:
                name: reverse-proxy
                port:
                  number: 8080
            path: "/"
            pathType: Prefix
