reverse-proxy/proxmox-ingress-minion.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.org/mergeable-ingress-type: minion
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  name: reverse-proxy-proxmox-minion
spec:
  ingressClassName: nginx
  rules:
    - host: proxmox.crazypokemondev.de
      http:
        paths:
          - backend:
              service:
                name: reverse-proxy-proxmox
                port:
                  name: http
            path: "/"
            pathType: Prefix
