reverse-proxy/proxmox-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.org/mergeable-ingress-type: master
  name: reverse-proxy-proxmox
spec:
  ingressClassName: nginx
  rules:
    - host: proxmox.crazypokemondev.de
  defaultBackend:
    service:
      name: reverse-proxy-proxmox
      port:
        name: http
  tls:
    - hosts:
        - proxmox.crazypokemondev.de
      secretName: letsencrypt
